Created a page template that can be used  to pre-include all header and footer content in new pages.

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,8 @@ html {
 	color: rgb(217, 217, 217);
 	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 	margin-top: 0cm;
+	padding-left: 10px;
+	padding-right: 10px;
 }
 
 header {
@@ -74,11 +76,43 @@ h2 {
 }
 
 #introduction {
+	text-align: center;
 	h2 {
+		padding-top: 3%;
 		padding-bottom: 10px;
+		font-size: 100px;
+		max-width: fit-content;
+		margin: auto;
+	}
+	p {
+		max-width: 40%;
+		margin: auto;
+	}
+
+	figcaption {
+		text-decoration: overline;
+		padding-left: 200px;
+	}
+	a {
+		color: rgb(217, 217, 217);
 	}
 }
 
+footer {
+	/* background-color: rgb(70, 70, 70); */
+	/* position: fixed; */
+	right: 0;
+	bottom: 0;
+	vertical-align: bottom;
+	text-align: end;
+	font-size: 10px;
+	a {
+		color: rgb(217, 217, 217);
+	}
+	img {
+		height: 7px;
+	}
+}
 .projects {
 	h2 {
 		text-decoration: underline;
@@ -96,4 +130,7 @@ h2 {
 	img {
 		height: 500px;
 	}
+}
+#introduction {
+	padding-bottom: 140px;
 }
